Feature : Added testimonial and Footer section

--- a/index.html
+++ b/index.html
@@ -140,9 +140,36 @@
                 </div>
             </div>
           </div>
-         
-        
           </div>
       </div>
+      <div class="main-sec-5">
+          <h1>Testimonial</h1>
+          <div class="sxth-sec">
+              <div>
+                  <img src="images/Man.png" alt="">
+              </div>
+              <div>
+                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae ratione expedita beatae? Magnam velit iusto facilis architecto beatae illo nulla animi reiciendis voluptas tempora doloribus amet iste, voluptatum fugiat iure.</p>
+              </div>
+          </div>
+      </div>
+                                            <!-- FOOTER -->
+      <footer>
+          <div class="fourty-width">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus vero quam facere impedit eum magnam harum et eligendi ut itaque.</p>
+          </div>
+          <div class="twnty-width">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, omnis eligendi distinctio neque sapiente quas sed enim expedita corrupti, iste tempora, repellat consectetur ipsum saepe error dolores consequatur molestiae. Vero.</p>
+          </div>
+          <div class="twnty-width">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, omnis eligendi distinctio neque sapiente quas sed enim expedita corrupti, iste tempora, repellat consectetur ipsum saepe error dolores consequatur molestiae. Vero.</p>
+        </div>
+        <div class="twnty-width">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, omnis eligendi distinctio neque sapiente quas sed enim expedita corrupti, iste tempora, repellat consectetur ipsum saepe error dolores consequatur molestiae. Vero.</p>
+        </div>
+        <p>CopyRight <a href="https://twitter.com/amazingasad124" target="_blank">
+            <span>  E-School Inc. </span> </a>2021 , All rights reserved .
+          </p>
+      </footer>
     </body>
 </html>
