Feature : Added footer section & social links , Added more media query

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="">Books</a></li>
                     <li><a href="">Courses</a></li>
                     <li><a href="">Others</a></li>
-                    <li><a href=" " class="green-btn">Sign In</a></li>
+                    <li><a href=" " class="green-btn sign-in">Sign In</a></li>
                 </ul>
                </div>
             </div>
@@ -143,6 +143,7 @@
           </div>
           </div>
       </div>
+                                                <!-- SECTION-5 -->
       <div class="main-sec-5">
           <h1>Testimonial</h1>
           <div class="sxth-sec">
@@ -157,16 +158,28 @@
                                             <!-- FOOTER -->
       <footer>
           <div class="fourty-width">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus vero quam facere impedit eum magnam harum et eligendi ut itaque.</p>
+            <p>Millions of people of all ages and from around world are involving their lives with us . Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, earum.</p>
           </div>
           <div class="twnty-width">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, omnis eligendi distinctio neque sapiente quas sed enim expedita corrupti, iste tempora, repellat consectetur ipsum saepe error dolores consequatur molestiae. Vero.</p>
+              <h4>Courses</h4>
+              <p><a href="">Graphics Design</a></p>
+              <p><a href="">Web Design</a></p>
+              <p><a href="#">Business</a></p>
+              <p><a href="#">Marketing</a></p>
+              <p><a href="#">Engineering</a></p>
           </div>
           <div class="twnty-width">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, omnis eligendi distinctio neque sapiente quas sed enim expedita corrupti, iste tempora, repellat consectetur ipsum saepe error dolores consequatur molestiae. Vero.</p>
+            <h4>Terms</h4>
+              <p><a href="#">Requirements</a></p>
+              <p><a href="#">Cookies Policy</a></p>
+              <p><a href="#">Terms & Condition</a></p>
         </div>
         <div class="twnty-width">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, omnis eligendi distinctio neque sapiente quas sed enim expedita corrupti, iste tempora, repellat consectetur ipsum saepe error dolores consequatur molestiae. Vero.</p>
+            <h4>Follow Us On </h4>
+              <p><a href="https://facebook.com/amazing.asad.124" target="_blank">FaceBook</a></p>
+              <p><a href="https://instagram.com/amazing.asad" target="_blank">Instagram</a></p>
+              <p><a href="https://twitter.com/amazingasad124" target="_blank">Twitter</a></p>
+              <p><a href="https://youtube.com/c/MixingBlender" target="_blank">Youtube</a></p>
         </div>
         <p>CopyRight <a href="https://twitter.com/amazingasad124" target="_blank">
             <span>  E-School Inc. </span> </a>2021 , All rights reserved .
