Fixed issues related to paading & margin, updated links

--- a/index.html
+++ b/index.html
@@ -176,9 +176,10 @@
         </div>
         <div class="twnty-width">
             <h4>Follow Us On </h4>
-              <p><a href="https://facebook.com/amazing.asad.124" target="_blank">FaceBook</a></p>
-              <p><a href="https://instagram.com/amazing.asad" target="_blank">Instagram</a></p>
-              <p><a href="https://twitter.com/amazingasad124" target="_blank">Twitter</a></p>
+              <p><a href="https://www.in-asad.com.com/facebook" target="_blank">FaceBook</a></p>
+              <p><a href="https://www.in-asad.com.com/instagram" target="_blank">Instagram</a></p>
+              <p><a href="https://www.in-asad.com.com/twitter" target="_blank">Twitter</a></p>
+              <p><a href="https://www.github.com/amazingasad" target="_blank">GitHub</a></p>
               <p><a href="https://youtube.com/c/MixingBlender" target="_blank">Youtube</a></p>
         </div>
         <p>CopyRight <a href="https://twitter.com/amazingasad124" target="_blank">
