Added responsive navbar and some event listener

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,184 +8,202 @@
     <link rel="stylesheet" href="style.css">
     <title>E-School | Where you can learn anything </title>
 </head>
-    <body>
-                                    <!-- SECTION-1 -->
-        <nav>
-          <div class="main-sec-1">
-              <div>
-                <img class="logo" src="icon/Logo.png" alt="">
-              </div>
-               <div>
-                <ul>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Books</a></li>
-                    <li><a href="">Courses</a></li>
-                    <li><a href="">Others</a></li>
-                    <li><a href=" " class="green-btn sign-in">Sign In</a></li>
-                </ul>
-               </div>
+
+<body>
+    <!-- SECTION-1 -->
+    <header class="header">
+        <nav class="navbar">
+            <a href="index.html" class="nav-logo"><img src="icon/Logo.png" alt=""></a>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Books</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Blog</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link green-btn">Login</a>
+                </li>
+            </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
             </div>
         </nav>
-                                                    <!-- SECTION-2  -->
-        <div class="container">
-            <div class="main-sec-2">
-                <div class="snd-sec">
-                    <p class="orange">Are you ready to learn ?</p>
-                    <h1>Learn with fun <br>on <span>any schedule</span></h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur soluta officiis voluptatem cumque quo iusto fuga cupiditate sed provident nemo.</p>
-                    <input type="button" value="Get Started" class="green-btn">
-                </div>
-                <div class="snd-sec">
-                    <img src="images/Illustration.png" alt="">
-                </div>
+    </header>
+    <!-- SECTION-2  -->
+    <div class="container">
+        <div class="main-sec-2">
+            <div class="snd-sec">
+                <p class="orange">Are you ready to learn ?</p>
+                <h1>Learn with fun <br>on <span>any schedule</span></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur soluta officiis voluptatem cumque
+                    quo iusto fuga cupiditate sed provident nemo.</p>
+                <input type="button" value="Get Started" class="green-btn">
+            </div>
+            <div class="snd-sec">
+                <img src="images/Illustration.png" alt="">
             </div>
         </div>
-        <div class="also">
-                                                    <!-- SECTION-3  -->
-            <div class="main-sec-3">
-                <div class="card card1">
-                    <div class="card-body">
-                        <img src="icon/book.png" alt="">
-                        <div class="card-detail">
-                            <h2>1500+ Topic</h2>
-                            <p>Learn anything</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card card2">
-                    <div class="card-body">
-                        <img src="icon/Student.png" alt="">
-                        <div class="card-detail">
-                            <h2>1800+ Students</h2>
-                            <p>Learn anything</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card card3">
-                    <div class="card-body">
-                        <img src="icon/Test.png" alt="">
-                        <div class="card-detail">
-                            <h2>9k+ Test Tokens</h2>
-                            <p>Learn anything</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card card4">
-                    <div class="card-body">
-                        <img src="icon/Students.png" alt="">
-                        <div class="card-detail">
-                            <h2>2000+ Students</h2>
-                            <p>Learn anything</p>
-                        </div>
+    </div>
+    <div class="also">
+        <!-- SECTION-3  -->
+        <div class="main-sec-3">
+            <div class="card card1">
+                <div class="card-body">
+                    <img src="icon/book.png" alt="">
+                    <div class="card-detail">
+                        <h2>1500+ Topic</h2>
+                        <p>Learn anything</p>
                     </div>
                 </div>
             </div>
+            <div class="card card2">
+                <div class="card-body">
+                    <img src="icon/Student.png" alt="">
+                    <div class="card-detail">
+                        <h2>1800+ Students</h2>
+                        <p>Learn anything</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card card3">
+                <div class="card-body">
+                    <img src="icon/Test.png" alt="">
+                    <div class="card-detail">
+                        <h2>9k+ Test Tokens</h2>
+                        <p>Learn anything</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card card4">
+                <div class="card-body">
+                    <img src="icon/Students.png" alt="">
+                    <div class="card-detail">
+                        <h2>2000+ Students</h2>
+                        <p>Learn anything</p>
+                    </div>
+                </div>
+            </div>
         </div>
-                                    <!-- SECTION-4 -->
-      <div class="main-sec-4">
-          <div class="frt-sec">
-              <h1>Online Courses</h1>
-          </div>
-          <div class="fth-sec">
-                <div class="cardy cardy1">
-                    <div class="cardy-body">
-                        <div class="cardy-img">
+    </div>
+    <!-- SECTION-4 -->
+    <div class="main-sec-4">
+        <div class="frt-sec">
+            <h1>Online Courses</h1>
+        </div>
+        <div class="fth-sec">
+            <div class="cardy cardy1">
+                <div class="cardy-body">
+                    <div class="cardy-img">
                         <img src="images/Morder pyschology.png" alt="">
-                        </div>
-                        <div class="cardy-detail">
-                            <h2>Modern Psychology</h2>
-                            <p>Destination</p>
-                            <input type="button" value="Buy Course" class="green-btn">
-                            <div class="crse-dtl">
-                                <img src="icon/calendar.png" alt="">
-                                <p>Start 20 April , 2021</p>
-                                <img src="icon/people.png" alt="">
-                                <p>80 Seats</p>
-                            </div>
+                    </div>
+                    <div class="cardy-detail">
+                        <h2>Modern Psychology</h2>
+                        <p>Destination</p>
+                        <input type="button" value="Buy Course" class="green-btn course-btn">
+                        <div class="crse-dtl">
+                            <img src="icon/calendar.png" alt="">
+                            <p>Start 20 April , 2021</p>
+                            <img src="icon/people.png" alt="">
+                            <p>80 Seats</p>
                         </div>
                     </div>
                 </div>
-                <div class="cardy cardy2">
-                    <div class="cardy-body">
-                        <div class="cardy-img">
+            </div>
+            <div class="cardy cardy2">
+                <div class="cardy-body">
+                    <div class="cardy-img">
                         <img src="images/Morder psyc.png" alt="">
-                        </div>
-                        <div class="cardy-detail">
-                            <h2>Modern Psychology</h2>
-                            <p>Destination</p>
-                            <input type="button" value="Buy Course" class="green-btn">
-                            <div class="crse-dtl">
-                                <img src="icon/calendar.png" alt="">
-                                <p>Start 20 April , 2021</p>
-                                <img src="icon/people.png" alt="">
-                                <p>60 Seats</p>
-                            </div>
+                    </div>
+                    <div class="cardy-detail">
+                        <h2>Modern Psychology</h2>
+                        <p>Destination</p>
+                        <input type="button" value="Buy Course" class="green-btn course-btn">
+                        <div class="crse-dtl">
+                            <img src="icon/calendar.png" alt="">
+                            <p>Start 20 April , 2021</p>
+                            <img src="icon/people.png" alt="">
+                            <p>60 Seats</p>
                         </div>
                     </div>
                 </div>
-                <div class="cardy cardy3">
-                    <div class="cardy-body">
-                        <div class="cardy-img">
+            </div>
+            <div class="cardy cardy3">
+                <div class="cardy-body">
+                    <div class="cardy-img">
                         <img src="images/Morder pychons.png" alt="">
-                        </div>
-                        <div class="cardy-detail">
-                            <h2>Modern Psychology</h2>
-                            <p>Destination</p>
-                            <input type="button" value="Buy Course" class="green-btn">
-                            <div class="crse-dtl">
-                                <img src="icon/calendar.png" alt="">
-                                <p>Start 20 April , 2021</p>
-                                <img src="icon/people.png" alt="">
-                                <p>90 Seats</p>
-                            </div>
+                    </div>
+                    <div class="cardy-detail">
+                        <h2>Modern Psychology</h2>
+                        <p>Destination</p>
+                        <input type="button" value="Buy Course" class="green-btn course-btn">
+                        <div class="crse-dtl">
+                            <img src="icon/calendar.png" alt="">
+                            <p>Start 20 April , 2021</p>
+                            <img src="icon/people.png" alt="">
+                            <p>90 Seats</p>
                         </div>
                     </div>
                 </div>
-          </div>
-          </div>
-      </div>
-                                                <!-- SECTION-5 -->
-      <div class="main-sec-5">
-          <h1>Testimonial</h1>
-          <div class="sxth-sec">
-              <div>
-                  <img src="images/Man.png" alt="">
-              </div>
-              <div>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae ratione expedita beatae? Magnam velit iusto facilis architecto beatae illo nulla animi reiciendis voluptas tempora doloribus amet iste, voluptatum fugiat iure.</p>
-              </div>
-          </div>
-      </div>
-                                            <!-- FOOTER -->
-      <footer>
-          <div class="fourty-width">
-            <p>Millions of people of all ages and from around world are involving their lives with us . Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, earum.</p>
-          </div>
-          <div class="twnty-width">
-              <h4>Courses</h4>
-              <p><a href="">Graphics Design</a></p>
-              <p><a href="">Web Design</a></p>
-              <p><a href="#">Business</a></p>
-              <p><a href="#">Marketing</a></p>
-              <p><a href="#">Engineering</a></p>
-          </div>
-          <div class="twnty-width">
+            </div>
+        </div>
+    </div>
+    </div>
+    <!-- SECTION-5 -->
+    <div class="main-sec-5">
+        <h1>Testimonial</h1>
+        <div class="sxth-sec">
+            <div>
+                <img src="images/Man.png" alt="">
+            </div>
+            <div>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae ratione expedita beatae? Magnam velit
+                    iusto facilis architecto beatae illo nulla animi reiciendis voluptas tempora doloribus amet iste,
+                    voluptatum fugiat iure.</p>
+            </div>
+        </div>
+    </div>
+    <!-- FOOTER -->
+    <footer>
+        <div class="fourty-width">
+            <p>Millions of people of all ages and from around world are involving their lives with us . Lorem ipsum
+                dolor sit amet consectetur adipisicing elit. Quidem, earum.</p>
+        </div>
+        <div class="twnty-width">
+            <h4>Courses</h4>
+            <p><a href="">Graphics Design</a></p>
+            <p><a href="">Web Design</a></p>
+            <p><a href="#">Business</a></p>
+            <p><a href="#">Marketing</a></p>
+            <p><a href="#">Engineering</a></p>
+        </div>
+        <div class="twnty-width">
             <h4>Terms</h4>
-              <p><a href="#">Requirements</a></p>
-              <p><a href="#">Cookies Policy</a></p>
-              <p><a href="#">Terms & Condition</a></p>
+            <p><a href="#">Requirements</a></p>
+            <p><a href="#">Cookies Policy</a></p>
+            <p><a href="#">Terms & Condition</a></p>
         </div>
         <div class="twnty-width">
             <h4>Follow Us On </h4>
-              <p><a href="https://www.in-asad.com.com/facebook" target="_blank">FaceBook</a></p>
-              <p><a href="https://www.in-asad.com.com/instagram" target="_blank">Instagram</a></p>
-              <p><a href="https://www.in-asad.com.com/twitter" target="_blank">Twitter</a></p>
-              <p><a href="https://www.github.com/amazingasad" target="_blank">GitHub</a></p>
-              <p><a href="https://youtube.com/c/MixingBlender" target="_blank">Youtube</a></p>
+            <p><a href="https://www.in-asad.com.com/facebook" target="_blank">FaceBook</a></p>
+            <p><a href="https://www.in-asad.com.com/instagram" target="_blank">Instagram</a></p>
+            <p><a href="https://www.in-asad.com.com/twitter" target="_blank">Twitter</a></p>
+            <p><a href="https://www.github.com/amazingasad" target="_blank">GitHub</a></p>
+            <p><a href="https://youtube.com/c/MixingBlender" target="_blank">Youtube</a></p>
         </div>
         <p>CopyRight <a href="https://twitter.com/amazingasad124" target="_blank">
-            <span>  E-School Inc. </span> </a>2021 , All rights reserved .
-          </p>
-      </footer>
-    </body>
+                <span> E-School Inc. </span> </a>2021 , All rights reserved .
+        </p>
+    </footer>
+    <script src="script.js"></script>
+</body>
+
 </html>
